# ipp_ext

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: run-catch2-tests.yml
benchmarks/: CMakeLists.txt  README.md  benchmark_dft.cpp  benchmark_filtermedian.cpp  benchmark_ops.cpp  benchmark_upfirdn.cpp  compare_eigen.cpp
examples/: CMakeLists.txt  README.md  dft_example.cpp  filter_example.cpp  filter_example_v2.cpp  heap_overflow_example.cpp  heap_overflow_image_example.cpp  image_dft_example.cpp  image_example.cpp  image_filtermedian_example.cpp  matrix_example.cpp  remap_example.cpp  sample_updown_example.cpp  vector_example.cpp
include/: ipp_ext.h  ipp_ext_convert.h  ipp_ext_copy.h  ipp_ext_dft.h  ipp_ext_errors.h  ipp_ext_filter.h  ipp_ext_generator.h  ipp_ext_image.h  ipp_ext_logical.h  ipp_ext_math.h  ipp_ext_matrix.h  ipp_ext_random.h  ipp_ext_sampling.h  ipp_ext_signal.h  ipp_ext_stats.h  ipp_ext_vec.h
include/convert/: Conj.h  Convert.h  PolarCart.h  PowerSpectr.h
include/filter/: FIR.h  FIRGen.h  FIRMR.h  FIRSR.h
include/image/: channels.h  filters.h  image.h  transforms.h
include/image/filters/: FilterMedianBorder.h
include/image/transforms/: DFT.h  Remap.h
include/math/: Add.h  AddC.h  AddProduct.h  AddProductC.h  Div.h  Exp.h  Ln.h  Mul.h  MulC.h  Norm.h  Sub.h  SubC.h
include/signal/: ipp_ext_convert.h  ipp_ext_copy.h  ipp_ext_dft.h  ipp_ext_generator.h  ipp_ext_math.h  ipp_ext_matrix.h  ipp_ext_random.h  ipp_ext_sampling.h  ipp_ext_transform.h  ipp_ext_vec.h
include/signal/convert/: Conj.h  Convert.h  PolarCart.h  PowerSpectr.h  RealCplx.h
include/signal/filter/: FIRGen.h  FIRMR.h  FIRSR.h
include/signal/logical/: Xor.h
include/signal/math/: Add.h  AddC.h  AddProduct.h  AddProductC.h  Div.h  Exp.h  Ln.h  Mul.h  MulC.h  Sub.h  SubC.h
include/signal/stats/: DotProd.h  Max.h  MaxIndx.h  Min.h  MinIndx.h  Norm.h  Sum.h
include/signal/transform/: Goertz.h
include/stats/: Max.h  MinIndx.h  Norm.h
include/transform/: Goertz.h
src/: ipp_ext_vec.cpp
tests/: CMakeLists.txt  README.md  test_convert.cpp  test_dft.cpp  test_filters.cpp  test_generators.cpp  test_image.cpp  test_logical.cpp  test_math.cpp  test_matrices.cpp  test_random.cpp  test_remap.cpp  test_sampling.cpp  test_stats.cpp  test_transforms.cpp  test_vectors.cpp  test_vectors_encapsulation.cpp  test_vectors_encapsulation.h
